--- a/MarvelComicsV2/View/Base.lproj/LaunchScreen.storyboard
+++ b/MarvelComicsV2/View/Base.lproj/LaunchScreen.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -16,19 +17,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group 2" translatesAutoresizingMaskIntoConstraints="NO" id="G5r-Ov-Nhn">
-                                <rect key="frame" x="38.5" y="272.5" width="337" height="351"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="351" id="iR7-bn-Xlm"/>
-                                    <constraint firstAttribute="width" secondItem="G5r-Ov-Nhn" secondAttribute="height" multiplier="337:351" id="ueB-0g-hO5"/>
-                                </constraints>
-                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="iQX-NR-9rE">
+                                <rect key="frame" x="20" y="348" width="374" height="200"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group 2" translatesAutoresizingMaskIntoConstraints="NO" id="G5r-Ov-Nhn">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="200"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="200" id="MH9-bC-KIm"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="G5r-Ov-Nhn" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Ob9-bd-m5F"/>
-                            <constraint firstItem="G5r-Ov-Nhn" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="p0c-cx-fqa"/>
+                            <constraint firstAttribute="trailing" secondItem="iQX-NR-9rE" secondAttribute="trailing" constant="20" id="9IL-gu-fkT"/>
+                            <constraint firstItem="iQX-NR-9rE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="ZsK-ZC-nZI"/>
+                            <constraint firstItem="iQX-NR-9rE" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="gIS-Mp-aF1"/>
+                            <constraint firstItem="iQX-NR-9rE" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="uvQ-tr-cgT"/>
                         </constraints>
                     </view>
                 </viewController>
