--- a/MarvelComicsV2/View/Base.lproj/Main.storyboard
+++ b/MarvelComicsV2/View/Base.lproj/Main.storyboard
@@ -17,8 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="fGP-AA-dC8">
-                                <rect key="frame" x="40" y="269" width="334" height="358"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="65" translatesAutoresizingMaskIntoConstraints="NO" id="fGP-AA-dC8">
+                                <rect key="frame" x="40" y="261.5" width="334" height="373"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group 2" translatesAutoresizingMaskIntoConstraints="NO" id="e3k-n9-D6z">
                                         <rect key="frame" x="0.0" y="0.0" width="334" height="200"/>
@@ -27,7 +27,7 @@
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="vzn-Go-rzr">
-                                        <rect key="frame" x="0.0" y="250" width="334" height="108"/>
+                                        <rect key="frame" x="0.0" y="265" width="334" height="108"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VZz-uj-t6Y">
                                                 <rect key="frame" x="0.0" y="0.0" width="334" height="50"/>
@@ -198,7 +198,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RVb-d4-0WS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="240" y="1048"/>
+            <point key="canvasLocation" x="123" y="783"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="u59-hI-gbz">
@@ -219,7 +219,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SYr-Aj-YpQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="443" y="1766"/>
+            <point key="canvasLocation" x="326" y="1501"/>
         </scene>
         <!--User Profile-->
         <scene sceneID="her-0c-4Cq">
@@ -324,7 +324,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GvU-gT-Qou" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1147.8260869565217" y="1765.8482142857142"/>
+            <point key="canvasLocation" x="1032" y="1501"/>
         </scene>
         <!--Web View Controller-->
         <scene sceneID="fp2-UD-s5P">
@@ -363,7 +363,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rnp-ew-21o" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2066.666666666667" y="1727.6785714285713"/>
+            <point key="canvasLocation" x="1951" y="1463"/>
         </scene>
         <!--Marvel Comics-->
         <scene sceneID="FRd-UQ-3H7">
@@ -385,6 +385,8 @@
                                             <rect key="frame" x="13" y="21" width="123" height="119"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="123" id="bp6-Mr-Ei2"/>
+                                                <constraint firstAttribute="height" constant="119" id="jZW-WN-gd9"/>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="123" id="klA-RB-5qR"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nkJ-hq-Trr">
@@ -440,7 +442,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ns9-ua-4dd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2069.5652173913045" y="1034.5982142857142"/>
+            <point key="canvasLocation" x="1954" y="769"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Ijr-fu-sIo">
@@ -461,7 +463,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qde-ac-1iR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1184" y="1035"/>
+            <point key="canvasLocation" x="1067" y="769"/>
         </scene>
         <!--Log In View Controller-->
         <scene sceneID="WWd-fK-Y18">
